# Rust-Raytracing

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  clean.sh  debug.sh  release.sh
configs/: scene.RON  scene2.ron  test_scene.RON
src/: axis_aligned_cube.rs  camera.rs  colour_map.rs  colourmap.rs  configuration.rs  cube.rs  hittable.rs  hittables.rs  lib.rs  main.rs  material.rs  noise.rs  ray.rs  rectangle.rs  sphere.rs  terrain.rs  triangle.rs  vec3.rs
