[package]
name = "raytracing"
description = """Raytracing in one weekend in rust.
Continued into a triangle mesh generating procedural terrain."""
readme = "README.md"
repository = "https://github.com/KianShepherd/raytracing"
license = "MIT OR Apache-2.0"
publish = false
version = "0.1.0"
authors = ["Kian Shepherd <Kianshepherd73@gmail.com>"]
edition = "2018"

[dependencies]
rand = "*"
noise = "0.7"
image = "*"
num_cpus = "1.6"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3